Kyverno/Example/add-nodeSelector.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-nodeselector
  annotations:
    policies.kyverno.io/title: Add nodeSelector
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      The nodeSelector field uses labels to select the node on which a Pod can be scheduled.
      This can be useful when Pods have specific needs that only certain nodes in a cluster can provide.
      This policy adds the nodeSelector field to a Pod spec and configures it with labels `app-ng`.
spec:
  rules:
  - name: add-nodeselector
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - test-ns          
    mutate:
      patchStrategicMerge:
        spec:
          nodeSelector:
            eks.amazonaws.com/nodegroup: skills-eks-app-nodegroup
