Kyverno/Example/deny-label-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: enforce
  rules:
  - name: check-for-labels
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - "prod"
    validate:
      message: "label 'app.security.kubernetes.io' is not passed"
      pattern:
        metadata:
          labels:
            app.security.kubernetes.io: "pass"
